# MarketingStudio

./: .gitignore  README.md  agent.py  classes.py  linkedin_post.py  linkedin_selenium_poster.py  promts.py  pyproject.toml  sourcepage.txt  tools.py  twitter_selenium_poster.py  upload-youtube.py  upload_youtube.py  utils.py
